Fix for navbar buttons not showing

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -15,7 +15,7 @@
 }
 
 .btn-primary{
-    margin: 0px 15px 0px 15px;
+    /* margin: 0px 15px 0px 15px; */
     border-radius: 12px;
     padding: 14px 40px;
     font-size: 20px;
